@@ -51,6 +51,9 @@
 
 	add anova.svycoxph (for Bryan Shepherd)
 
+	add stringsToFactors=TRUE to svyby to ensure factors have same levels in domains
+	(for various people including Stephanie Zimmer)
+
 4.1-1	CRAN
 
 4.1	svyquantile() has been COMPLETELY REWRITTEN. The old version is available
